Inputs response fixed
inputs overlap when size change, adittional individual div created for each input and offset added for good response

--- a/Frontend/src/app/formulario-registro/formulario-registro.component.css
+++ b/Frontend/src/app/formulario-registro/formulario-registro.component.css
@@ -6,9 +6,10 @@ body{
     margin: 80px auto auto auto;
 
 }
+
   .form-input{
-    width: 312px;
     height: 48px;
+    border-radius: 5px;
     border: 0px solid;
     border-bottom: 1px solid black;
   }
@@ -39,18 +40,17 @@ h1{
     margin: 0 0 53px 0;
   }
 
-  .division{
-    width: 300px;
-    height: 1px;
-
-  }
+hr{
+  margin: 0 0 0 0;
+}
 
   .circle {
     width: 10px;
     height: 10px;
     border: solid 1px black;
     border-radius: 50%;
-    margin: 0 auto; 
+    margin: 0 auto;
+    padding: 0 0;
   }
 
   .googleSign{
